<resources>
    <string name="app_name">邦音乐</string>
    <string name="textview_title">邦音乐</string>
    <string name="button_search">搜索</string>
    <string name="testName">Papi酱</string>
    <string name="testDescribe">一个集美貌与才华为一身的女子</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="default_text">晴天</string>
    <string name="search_no_result">这里空空如也~点击屏幕试试</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="clear">清除</string>
    <string name="pull_for_refresh">下拉可以刷新！</string>
    <string name="relese_for_refresh">松开可以刷新</string>
    <string name="refreshing">正在刷新……</string>
    <string name="load_more">加载更多</string>
    <string name="location_default">正在定位………</string>
    <string name="location_false">定位失败</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="music">音乐</string>
    <string name="my">我的</string>
    <string name="info">资讯</string>
    <string name="map">地图</string>
</resources>
