<?xml version="1.0" encoding="utf-8"?>
<!--主界面的标题栏-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitleAndNavigationBar">
    <LinearLayout
        android:id="@+id/linearlayout_actionbar"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_location"/>
        <RelativeLayout
            android:layout_marginLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textview_actionbar_location_city"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textColor="@color/colorText"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/textview_actionbar_location_district"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@id/textview_actionbar_location_city"
                android:text="@string/location_default"
                android:textColor="@color/colorText"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>
    <!--标题-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_title"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@color/colorTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>

    <!--搜索按钮-->
    <Button
        android:id="@+id/button_actionbar_search"
        android:layout_width="58dp"
        android:layout_height="34dp"
        android:text="@string/button_search"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:textSize="8pt"
        android:textColor="@color/colorTitle"
        android:background="@drawable/background_button_search"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>