<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:background="@color/colorTitleAndNavigationBar"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">
    <LinearLayout
        android:id="@+id/id_linearlayout_navigation_music"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_imageview_icon_music"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_navigation_music"
            android:layout_margin="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_linearlayout_navigation_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_imageview_icon_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_navigation_info"
            android:layout_margin="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_linearlayout_navigation_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_imageview_icon_my"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_navigation_my"
            android:layout_margin="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>

</LinearLayout>
